bug - nav overlapping modal
appears when visiting the open modal url. Modal opens at top of the page where site nav overlaps its content

--- a/_assets/sass/foundations/_z-index.scss
+++ b/_assets/sass/foundations/_z-index.scss
@@ -1,10 +1,10 @@
 
-$z-nav-upper:       40;
-$z-nav:             35;
-$z-modal-upper:     30;
-$z-modal:           25;
-$z-overlay-upper:   20;
-$z-overlay:         15;
+$z-modal-upper:     40;
+$z-modal:           35;
+$z-overlay-upper:   30;
+$z-overlay:         25;
+$z-nav-upper:       20;
+$z-nav:             15;
 $z-content-overlay: 10;
 $z-content-upper:   5;
 $z-content:         0;
